# Deep-Learning-with-Differential-Privacy

./: .gitignore  README.md  cifar10.py  dp_optimizer.py  environment.yml  mnist.py  pyproject.toml  requirements.txt  script.sh  visualization.py  visulization.ipynb
configs/: cifar10-dp.yaml  cifar10-sgd.yaml  mnist-dp.yaml  mnist-sgd.yaml
figures/comparisons/: all_runs_summary.csv  comparison_report.md  dataset_summary.csv  experiment_summary.csv
results/cifar10-dp-sgd/20260415-024451/: history.csv  metrics.json  resolved-config.yaml
results/mnist-dp-sgd/20260415-015205/: best.pt  history.csv  last.pt  metrics.json  resolved-config.yaml
results/mnist-dp-sgd/20260415-020057/: best.pt  history.csv  last.pt  metrics.json  resolved-config.yaml
results/mnist-dp-sgd/20260415-020942/: best.pt  history.csv  last.pt  metrics.json  resolved-config.yaml
results/mnist-dp-sgd/20260415-021816/: best.pt  history.csv  last.pt  metrics.json  resolved-config.yaml
results/mnist-dp-sgd/20260415-022659/: best.pt  history.csv  last.pt  metrics.json  resolved-config.yaml
results/mnist-dp-sgd/20260415-023553/: best.pt  history.csv  last.pt  metrics.json  resolved-config.yaml
results/mnist-sgd/20260415-143213/: best.pt  history.csv  last.pt  metrics.json  resolved-config.yaml
src/dp_sgd/: cli.py  config.py  data.py  models.py  optim.py  privacy.py  train.py  utils.py
